Sonarlint cleanup